tests/baselines/reference/recursiveBaseCheck6.errors.txt
==== tests/cases/compiler/recursiveBaseCheck6.ts (2 errors) ====
    class S18<A> extends S18<{ S19: A; }>{ }
          ~~~
!!! recursiveBaseCheck6.ts(1,7): error TS2100: Class 'S18<A>' is recursively referenced as a base type of itself.
    (new S18()).blah;
                ~~~~
!!! recursiveBaseCheck6.ts(2,13): error TS2094: The property 'blah' does not exist on value of type 'S18<{}>'.